Fix spacing

--- a/_sass/display.sass
+++ b/_sass/display.sass
@@ -37,7 +37,7 @@ h2
     text-align: center
   article
     display: inline-block
-    padding: 10px 32px
+    padding: 50px 32px
     position: relative
     text-align: center
     width: 253px
